--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 boto3==1.12.42
 botocore==1.15.49
 chardet==3.0.4
+crispy-bootstrap4==2024.1
 dj-database-url==0.5.0
 Django==3.0.4
 django-allauth==0.50.0
@@ -14,6 +15,7 @@ idna==2.8
 jmespath==0.10.0
 oauthlib==3.2.2
 Pillow==7.0.0
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
 PyJWT==2.9.0
 python3-openid==3.2.0
@@ -21,6 +23,7 @@ pytz==2024.1
 requests==2.22.0
 requests-oauthlib==2.0.0
 s3transfer==0.3.7
+setuptools==74.1.1
 sqlparse==0.5.1
 stripe==3.5.0
 urllib3==1.25.11
