--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
-asgiref==3.2.3
+asgiref==3.8.1
 boto3==1.12.42
 botocore==1.15.42
+certifi==2024.8.30
+cffi==1.17.1
 chardet==3.0.4
+crispy-bootstrap4==2024.1
+cryptography==43.0.1
+defusedxml==0.7.1
 dj-database-url==0.5.0
-Django==3.0.1
+Django==4.2.16
 django-allauth==0.50.0
 django-countries==7.2.1
-django-crispy-forms==1.8.1
+django-crispy-forms==2.3
 django-storages==1.9.1
 docutils==0.15.2
 gunicorn==20.0.4
@@ -15,11 +20,16 @@ jmespath==0.9.5
 oauthlib==3.1.0
 Pillow==7.0.0
 psycopg2-binary==2.8.5
+pycparser==2.22
+PyJWT==2.9.0
+python-dateutil==2.9.0.post0
 python3-openid==3.1.0
 pytz==2019.3
 requests==2.22.0
 requests-oauthlib==1.3.0
 s3transfer==0.3.3
-sqlparse==0.3.0
+six==1.16.0
+sqlparse==0.5.1
 stripe==2.42.0
+typing_extensions==4.12.2
 urllib3==1.25.7
