--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ crispy-bootstrap4==2024.1
 cryptography==43.0.1
 defusedxml==0.7.1
 dj-database-url==0.5.0
-Django>=5.1.1
+Django>=4.2,<5.0
 django-allauth==0.50.0
 django-countries==7.2.1
 django-crispy-forms==2.3
