--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Django>=4.2,<5.0
 django-allauth==0.50.0
 django-countries==7.2.1
 django-crispy-forms==2.3
-django-storages==1.9.1
+django-storages>=1.13.0
 docutils==0.15.2
 gunicorn==20.0.4
 idna==2.8
